--- a/FullThrottle/ActivityPeriod/templates/ActivityPeriod/home.html
+++ b/FullThrottle/ActivityPeriod/templates/ActivityPeriod/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--!DOCTYPE html>
 <html>
     <head>
         <title>
@@ -15,4 +15,57 @@
             </form>
         </div>
     </body>
+</html-->
+
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title>
+
+        </title>
+        <style>
+        	body{
+        		margin: 0px !important;
+        	}
+        	.main {
+			    margin: auto;
+			    width: 400px;
+			    border: 1px solid #ccc;
+			    border-top: 2px solid #ccc;
+			    padding: 10px 30px 10px 20px;
+			    border-radius: 5px;
+			    box-shadow: 5px 5px 5px 4px #0000005c;
+    			background: #cad6d6;
+			}
+			.btoon {
+			    padding: 7px;
+			    width: 120px;
+			    background: #FF8400;
+			    font-size: 18px;
+			    color: #fff;
+			    border: 1px solid #FF8400;
+			    border-radius: 3px;
+			}
+        </style>
+    </head>
+
+    <body>
+    
+	<div class="" style="background:#2ea29c url(\ActivityPeriod\templates\ActivityPeriod\website-design-background.png); min-height: 750px; background-size: cover;" >
+		<div  style="padding-top:290px;">
+			<div class="main" align="center" style="">
+			   <div class = "User Name">
+		            <form action='../Users/' method="GET">
+		            {{ form.as_p }}
+		                <input type="submit" class ="btoon" name = "submit result" value="Submit">
+		            </form>
+		        </div>
+		    </div>
+	    </div>
+    </div>
+    </body>
 </html>
+
+
+
